# gst-plugin-vpe-uvc

./: README.md  configure.ac
src/: Makefile.am  Makefile.in  cmem_buf.c  cmem_buf.h  cmempool.c  cmempool.h  gstacceltransform.c  gstacceltransform.h  v4l2_m2m.c  v4l2_m2m.h
